fixed layout issues; updated icons

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -7,7 +7,7 @@ $link-color:                                #0099d3;  // sets link (also accordi
 //$navbar-pf-border-color:                    #063451;  // sets 3px border color at top of screen
 
 $navbar-pf-alt-bg-color:                    #0c69a5; // sets backgound color of navigation bar
-$navbar-pf-alt-navbar-toggle-icon-bar-hover-bg: #d4edfa;
+$navbar-pf-alt-navbar-toggle-icon-bar-hover-bg: #fff;
 $img-bg-navbar:                             "navbar.png"; // sets a custom background image in the header
 $color-success:                             #3f9c35;
 $color-warning:                             #ec7a08;
